--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,10 @@ option {
   color: #656565;
 }
 
+/* About Us Section
+-
+ */
+
 #about-us {
   background-color: #f8f8f8;
 }
@@ -220,6 +224,20 @@ option {
   margin-bottom: 5px;
 }
 
+.sub-header {
+  color: #c5a880;
+  line-height: 23.4px;
+  margin-bottom: 5px;
+  font-weight: 600;
+}
+
+.header {
+  font-size: 4.1rem;
+  font-family: "Old Standard TT", serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
 #about-us-description p {
   line-height: 28.8px;
   color: #999999;
@@ -236,23 +254,28 @@ option {
   color: white;
 }
 
-/* .card-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
+#services {
+  padding: 100px 100px;
+  background-color: #f8f8f8;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgba(0, 0, 0, 0.732);
-  color: white;
-  opacity: 0;
+  text-align: center;
 }
 
-.card-overlay:hover {
-  opacity: 1;
-} */
+.services-cointainer {
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
 
-
+.icon-card {
+  background-color: red;
+  height: 183px;
+  width: 220px;
+  border-radius: 50% 50% 50% 0;
+  box-shadow: 0px 5px 25px -2px rgba(0, 0, 0, 0.06);
+}
