--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,8 @@ option {
   width: 80%;
   margin: 0 auto;
   display: flex;
-  column-gap: 10rem;
+  /* column-gap: 10rem; */
+  justify-content: space-between;
 }
 
 #card1 {
