--- a/styles.css
+++ b/styles.css
@@ -64,19 +64,24 @@ nav {
 }
 
 #query {
-  /* position: relative;
-  z-index: 3;
-  margin-top: -80px; */
-  padding-top: 200px;
+  background-color: #f8f8f8;
+  padding: 0;
+  position: relative;
+}
+
+#query-container {
+  width: 78.3%;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background-color: #222222; */
-  /* width: 100%; */
   margin: 0 auto;
   color: #ffffff;
   height: 9.7rem;
   background-color: #f8f8f8;
+  position: absolute;
+  top: -77.5px;
+  left: 50%;
+  margin-left: -657px; 
 }
 
 #query1 {
@@ -84,7 +89,7 @@ nav {
   justify-content: space-evenly;
   align-items: center;
   background-color: #222222;
-  width: 66%;
+  width: 83.6%;
   height: 9.7rem;
 }
 
@@ -93,7 +98,7 @@ nav {
   justify-content: space-evenly;
   align-items: center;
   background-color: #c5a880;
-  width: 14%;
+  width: 16.4%;
   height: 9.7rem;
 }
 
@@ -144,7 +149,7 @@ option {
 
 #about-us {
   background-color: #f8f8f8;
-  padding: 128px 0;
+  padding: 208px 0;
 }
 
 #about-us-container {
@@ -275,7 +280,7 @@ option {
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding-bottom: 76px;
+  margin-bottom: 76px;
 }
 
 .icon-cards {
